@@ -183,27 +183,31 @@ EOS
     def obj.day; 31; end
     cursor[:in] = obj
     cursor.exec
-    assert_equal(DateTime.parse('2006-12-31'), cursor[:out])
+    assert_equal(DateTime.parse('2006-12-31 00:00:00' + @local_timezone), cursor[:out])
     # test hour
     def obj.hour; 23; end
     cursor[:in] = obj
     cursor.exec
-    assert_equal(DateTime.parse('2006-12-31 23:00:00'), cursor[:out])
+    assert_equal(DateTime.parse('2006-12-31 23:00:00' + @local_timezone), cursor[:out])
     # test min
     def obj.min; 59; end
     cursor[:in] = obj
     cursor.exec
-    assert_equal(DateTime.parse('2006-12-31 23:59:00'), cursor[:out])
+    assert_equal(DateTime.parse('2006-12-31 23:59:00' + @local_timezone), cursor[:out])
     # test sec
     def obj.sec; 59; end
     cursor[:in] = obj
     cursor.exec
-    assert_equal(DateTime.parse('2006-12-31 23:59:59'), cursor[:out])
+    assert_equal(DateTime.parse('2006-12-31 23:59:59' + @local_timezone), cursor[:out])
+
+    # sec_fraction and timezone are available on Oracle 9i or later
+    return if $oracle_version < OCI8::ORAVER_9_0
+
     # test sec_fraction
     def obj.sec_fraction; DateTime.parse('0001-01-01 00:00:00.000001').sec_fraction * 999999 ; end
     cursor[:in] = obj
     cursor.exec
-    assert_equal(DateTime.parse('2006-12-31 23:59:59.999999'), cursor[:out])
+    assert_equal(DateTime.parse('2006-12-31 23:59:59.999999' + @local_timezone), cursor[:out])
     # test utc_offset (Time)
     def obj.utc_offset; @utc_offset; end
     obj.instance_variable_set(:@utc_offset, 9 * 60 * 60)
@@ -224,6 +228,67 @@ EOS
     cursor[:in] = obj
     cursor.exec
     assert_equal(DateTime.parse('2006-12-31 23:59:59.999999 -05:00'), cursor[:out])
+  end
+
+  def test_timezone
+    if $oracle_version >= OCI8::ORAVER_9_0
+      # temporarily change the mapping to test OCI8::BindType::Util.default_timezone.
+      OCI8::BindType::Mapping[:date] = OCI8::BindType::TimeViaOCIDate
+    end
+    begin
+      assert_raise(ArgumentError) do
+        OCI8::BindType::Util.default_timezone = :invalid_value
+      end
+
+      [:local, :utc].each do |tz|
+        OCI8::BindType::Util.default_timezone = tz
+        @conn.exec("select sysdate, to_date('2008-01-02', 'yyyy-mm-dd') from dual") do |row|
+          row.each do |dt|
+            assert_kind_of(Time, dt)
+            assert_equal(tz, dt.utc? ? :utc : :local)
+          end
+          assert_equal(2008, row[1].year)
+          assert_equal(1, row[1].month)
+          assert_equal(2, row[1].day)
+        end
+      end
+    ensure
+      OCI8::BindType::Util.default_timezone = :local
+      if $oracle_version >= OCI8::ORAVER_9_0
+        OCI8::BindType::Mapping[:date] = OCI8::BindType::Time
+      end
+    end
+
+    if $oracle_version >= OCI8::ORAVER_9_0
+      ses_tz = nil
+      @conn.exec('select sessiontimezone from dual') do |row|
+        ses_tz = row[0]
+      end
+
+      begin
+        ['+09:00', '+00:00', '-05:00'].each do |tz|
+          @conn.exec("alter session set time_zone = '#{tz}'")
+          @conn.exec("select current_timestamp, sysdate, to_timestamp('2008-01-02', 'yyyy-mm-dd') from dual") do |row|
+            row.each do |dt|
+              case dt
+              when Time
+                assert_equal(tz, timezone_string(*((dt.utc_offset / 60).divmod 60)))
+              when DateTime
+                assert_equal(tz, dt.zone)
+              else
+                flunk "unexpedted type #{dt.class}"
+              end
+            end
+            assert_equal(2008, row[2].year)
+            assert_equal(1, row[2].month)
+            assert_equal(2, row[2].day)
+          end
+        end
+      ensure
+        @conn.exec("alter session set time_zone = '#{ses_tz}'")
+      end
+    else
+    end
   end
 
   def test_interval_ym_select
